--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <div class="product-card">
                     <img src="https://lh3.googleusercontent.com/T7T0MNKYx7t8III5ivtG-ihuuNp3UgDh7M2amQRCCUgYFVt3WevW7gQpPApqzOXj5TYBCWzJ0bFQCfKL-aqlmHkdgGGcSWgg_bfXvCj9sVz0gkNVxTOAz445qmbtPE4ALA=w1280" alt="熱狗雞蛋糕" class="product-image">
                     <div class="product-info">
-                        <h3 class="product-name">熱狗雞蛋糕</h3>
+                        <h3 class="product-name">美式熱狗</h3>
                         <p>紐約風味脆皮熱狗+亨氏蕃茄醬</p>
                     </div>
                 </div>
@@ -328,5 +328,9 @@
             </div>
         </div>
     </section>
+    <footer style="background-color: #333333; color: white; text-align: center; padding: 20px;">
+    <p>華山脆皮雞蛋糕｜永和在地人氣點心</p>
+    <p>地址：新北市永和市福和路352號1樓｜營業時間：週一至週五 14:00-24:00</p>
+</footer>
 </body>
 </html>
