--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         /* 頁首樣式 */
         header {
-            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://lh4.googleusercontent.com/MkoADg88dSQoToA91AerDumDBlMyrTf3RPjA7FvyQ_Geb075piF5AOelS89kKLkziDWTau9tqd3NRjN-En6c5EU=w16383');
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('assets/images/hero.jpg');
             background-size: cover;
             background-position: center;
             height: 500px;
@@ -251,7 +251,7 @@
 <body>
     <!-- 頁首區 -->
     <header>
-        <img src="https://lh4.googleusercontent.com/84RjT7KwnP0V165PBnL_2WUQrfvYmX-TzRXXQA4BxI-Xi33woQBlcSgibC39zBrIQe2Avhl8wFFyDixyrJzN9bqmGdw-GZ-oP4Gr79lNn6UZ3qvbIP-NRjUcsTKybRgJOw=w1280" alt="華山脆皮雞蛋糕" class="logo">
+        <img src="assets/images/product8.png" alt="華山脆皮雞蛋糕" class="logo">
         <h1>華山脆皮雞蛋糕</h1>
         <h2>～ 現烤的美味 ～ 🤤</h2>
     </header>
@@ -263,31 +263,52 @@
             <div class="product-grid">
                 <!-- 產品卡片 -->
                 <div class="product-card">
-                    <img src="https://lh3.googleusercontent.com/QFVoUU4_8Tz-cCK50LvgBq0H_4vx2w4fRvtVaeBlHAmsc5016qdUArvLKZBbjHDHnNkowNFYrA9rr6ydffhkaA=w1280" alt="內餡雞蛋糕" class="product-image">
+                    <img src="assets/images/product1.png" alt="內餡雞蛋糕" class="product-image">
                     <div class="product-info">
                         <h3 class="product-name">內餡雞蛋糕</h3>
                         <p>每日現調卡士達醬、拉絲起司、奧利奧Oreo、黑糖麻糬四種口味選擇</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://lh3.googleusercontent.com/T7T0MNKYx7t8III5ivtG-ihuuNp3UgDh7M2amQRCCUgYFVt3WevW7gQpPApqzOXj5TYBCWzJ0bFQCfKL-aqlmHkdgGGcSWgg_bfXvCj9sVz0gkNVxTOAz445qmbtPE4ALA=w1280" alt="熱狗雞蛋糕" class="product-image">
+                    <img src="assets/images/product2.png" alt="美式熱狗" class="product-image">
                     <div class="product-info">
                         <h3 class="product-name">美式熱狗</h3>
                         <p>紐約風味脆皮熱狗+亨氏蕃茄醬</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://lh3.googleusercontent.com/MeG_tSwhkc0aVadVse3m517pvnKTvl7DcPlexbCZ3W_0JnEoBJtcwegr1A3wXOhU_AGq5ghjdNGqiLKkGAiLYZymIyxmxKfBNBibdyvBRbCGuHonXakXpELdN5eVH7asfQ=w1280" alt="原味雞蛋糕" class="product-image">
+                    <img src="assets/images/product3.png" alt="原味雞蛋糕" class="product-image">
                     <div class="product-info">
                         <h3 class="product-name">原味雞蛋糕</h3>
                         <p>大人、小朋友愛不釋手的美味</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://lh5.googleusercontent.com/PNIK7zVHgzoq9pn7VdhYTntUFcInYMoV9QegbGRQ3v13FA-4PUheZRfI5WFqfSm_vwafS7kJ-izu0LP5o4wGQ4U=w1280" alt="德式香腸雞蛋糕" class="product-image">
+                    <img src="assets/images/product4.png" alt="德式香腸雞蛋糕" class="product-image">
                     <div class="product-info">
                         <h3 class="product-name">德式香腸雞蛋糕</h3>
                         <p>鹹鹹甜甜好滋味</p>
+                    </div>
+                </div>
+		<div class="product-card">
+                    <img src="assets/images/product5.png" alt="湯圓雞蛋糕" class="product-image">
+                    <div class="product-info">
+                        <h3 class="product-name">湯圓雞蛋糕</h3>
+                        <p>桂冠湯圓：花生、芝麻口味任你選</p>
+                    </div>
+                </div>
+		<div class="product-card">
+                    <img src="assets/images/product7.png" alt="桂山冰棒" class="product-image">
+                    <div class="product-info">
+                        <h3 class="product-name">台電桂山冰棒</h3>
+                        <p>只有夏天才有的</p>
+                    </div>
+                </div>
+		<div class="product-card">
+                    <img src="assets/images/product6.png" alt="拉絲起司雞蛋糕" class="product-image">
+                    <div class="product-info">
+                        <h3 class="product-name">拉絲起司雞蛋糕</h3>
+                        <p>老闆起司下重本，可以牽絲牽很長喔～</p>
                     </div>
                 </div>
             </div>
@@ -305,7 +326,7 @@
                 <!-- 地圖 -->
                 <div class="map-container">
                     <a href="https://maps.app.goo.gl/1pYwvo3BMQQMVytL6" target="_blank">
-                        <img src="https://lh6.googleusercontent.com/XF4Rn-SCdkBzzxYHK3bSHOfBWmxCF0qj8kzU0oTo-C4-COpLfZ_RFjxJlO5gckwgyeRAJLXvSgRdGvPHzD-eUmIEcQz_QTqNI_Q_PR4XAR-0pYba1eGXGKwNpOPbVKzu5Q=w1280" alt="地圖位置">
+                        <img src="assets/images/map.png" alt="地圖位置">
                     </a>
                 </div>
             </div>
