--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                     </div>
                 </div>
 		<div class="product-card">
-                    <img src="assets/images/product7.png" alt="桂山冰棒" class="product-image">
+                    <img src="assets/images/product7.jpg" alt="桂山冰棒" class="product-image">
                     <div class="product-info">
                         <h3 class="product-name">台電桂山冰棒</h3>
                         <p>只有夏天才有的</p>
