--- a/index.html
+++ b/index.html
@@ -297,13 +297,13 @@
                         <p>桂冠湯圓：花生、芝麻口味任你選</p>
                     </div>
                 </div>
-		<div class="product-card">
+		<!-- <div class="product-card">
                     <img src="assets/images/product7.jpg" alt="桂山冰棒" class="product-image">
                     <div class="product-info">
                         <h3 class="product-name">台電桂山冰棒</h3>
                         <p>只有夏天才有的</p>
                     </div>
-                </div>
+                </div> -->
 		<div class="product-card">
                     <img src="assets/images/product6.png" alt="拉絲起司雞蛋糕" class="product-image">
                     <div class="product-info">
