--- a/index.html
+++ b/index.html
@@ -168,13 +168,12 @@
             margin: 30px 0;
             border-radius: 15px;
             overflow: hidden;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
         }
 
         .map-container img {
-            width: 100%;
             height: auto;
             border: none;
+            border-radius: 10px
         }
 
         /* 聯絡區 */
@@ -353,25 +352,25 @@
     <div class="container">
         <h2 class="section-title">常見問題</h2>
         <div style="max-width: 800px; margin: 0 auto; text-align: left;">
-            <h3 style="color: #FF6B6B;">Q: 雞蛋糕可以用 UberEats 訂嗎？</h3>
-            <p>A: 沒問題，我們有提供 UberEats 外送服務，搜尋「華山脆皮雞蛋糕」就找得到！</p>
+            <h3 style="color: #FF6B6B;">Q：雞蛋糕可以用 UberEats 訂嗎？</h3>
+            <p>A：沒問題，我們有提供 UberEats 外送服務，搜尋「華山脆皮雞蛋糕」就找得到！</p>
 
-            <h3 style="color: #FF6B6B;">Q: 平日和假日的營業地點有不同嗎？</h3>
-            <p>A: 有的～平日我們在永和福和路店面營業。六日如果天氣好，就會去台北 1914 華山文創園區「西一館前大草原」擺攤。</p>
+            <h3 style="color: #FF6B6B;">Q：平日和假日的營業地點有不同嗎？</h3>
+            <p>A：有的～平日我們在永和福和路店面營業。六、日如果天氣好，就會去台北 1914 華山文創園區「西一館前大草原」擺攤。</p>
 
-            <h3 style="color: #FF6B6B;">Q: 下雨天也會擺攤嗎？</h3>
-            <p>A: 六日如果下雨，華山可能不會出攤，但永和店會開門營業。建議加我們 <a href="https://lin.ee/6naLKdL" target="_blank" style="color: #06C755;">LINE 好友</a> 詢問當天資訊喔！</p>
+            <h3 style="color: #FF6B6B;">Q：下雨天也會擺攤嗎？</h3>
+            <p>A：六日如果下雨，華山可能不會出攤，但永和店會開門營業。建議加我們 <a href="https://lin.ee/6naLKdL" target="_blank" style="color: #06C755;">LINE 好友</a> 詢問當天資訊喔！</p>
 
-            <h3 style="color: #FF6B6B;">Q: 有沒有分店？</h3>
+            <h3 style="color: #FF6B6B;">Q：有沒有分店？</h3>
             <p>
-                有啦！目前我們有三個據點：<br>
+                A：有啦！目前我們有三個據點：<br>
                 ✔ 平日：永和店（福和路352號）<br>
                 ✔ 假日：台北華山文創園區 西一館前大草原擺攤<br>
                 ✔ 假日限定「華山起司條店」：專賣華山雞塊、薯條、起司條、冰紅茶，好天氣限定出現！
             </p>
 
-            <h3 style="color: #FF6B6B;">Q: 有哪些人氣口味推薦？</h3>
-            <p>A: 拉絲起司、黑糖麻糬、美式熱狗是大家最常點的！還有假日限定的華山雞塊也超熱門～</p>
+            <h3 style="color: #FF6B6B;">Q：有哪些人氣口味推薦？</h3>
+            <p>A：拉絲起司、黑糖麻糬、美式熱狗是大家最常點的！還有假日限定的華山雞塊也超熱門～</p>
         </div>
     </div>
 </section>
