--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         /* 頁首樣式 */
         header {
-            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('assets/images/hero.jpg');
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('assets/images/banner.png');
             background-size: cover;
             background-position: center;
             height: 500px;
