--- a/index.html
+++ b/index.html
@@ -246,6 +246,15 @@
             }
         }
     </style>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WNB6L9MQDF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WNB6L9MQDF');
+</script>
 </head>
 <body>
     <!-- 頁首區 -->
