--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 <!-- 地圖 -->
                 <div class="map-container">
                     <a href="https://maps.app.goo.gl/1pYwvo3BMQQMVytL6" target="_blank">
-                        <img src="assets/images/map.png" alt="地圖位置">
+                        <img src="assets/images/map_cr.png" alt="地圖位置">
                     </a>
                 </div>
             </div>
