--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="華山脆皮雞蛋糕，現烤的美味，多種口味選擇，每日現調卡士達醬、拉絲起司、奧利奧Oreo、黑糖麻糬、紐約風味脆皮熱狗、德式香腸，大人小孩都愛不釋手！歡迎來店品嚐或使用UberEats外送！">
     <meta name="keywords" content="華山脆皮雞蛋糕,雞蛋糕,永和美食,永和小吃,脆皮雞蛋糕">
     <link rel="canonical" href="https://www.1914cake.com"/>
-    <title>華山脆皮雞蛋糕 - 現烤的美味</title>
+    <title>華山脆皮雞蛋糕｜永和現烤點心專賣店・華山假日限定攤位</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <style>
         :root {
