--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="https://www.1914cake.com/assets/images/favicon.png">
     <link rel="apple-touch-icon" href="https://www.1914cake.com/assets/images/favicon.png">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 
 
@@ -379,6 +380,10 @@
     <div class="container">
         <h2 class="section-title">常見問題</h2>
         <div style="max-width: 800px; margin: 0 auto; text-align: left;">
+
+            <h3 style="color: #FF6B6B;">Q：可以大量預購嗎？</h3>
+            <p>A：可以喔！我們的麵糊都是當天現打的，如果有大量需求，請<strong>提前一天以上</strong>透過 <a href="https://lin.ee/6naLKdL" target="_blank" style="color: #06C755;">LINE</a> 或撥打 <a href="tel:0963933070" style="color: #FF6B6B;">0963-933-070</a> 預訂，這樣我們才能幫你準備得更周全～</p>
+
             <h3 style="color: #FF6B6B;">Q：雞蛋糕可以用 UberEats 訂嗎？</h3>
             <p>A：沒問題，我們有提供 UberEats 外送服務，搜尋「華山脆皮雞蛋糕」就找得到！</p>
 
@@ -417,6 +422,14 @@
       "acceptedAnswer": {
         "@type": "Answer",
         "text": "沒問題，我們有提供 UberEats 外送服務，搜尋「華山脆皮雞蛋糕」就找得到！"
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "可以大量預購嗎？",
+      "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "可以喔！我們的麵糊都是當天現打的，如果有大量需求，請提前一天以上透過 LINE 或撥打 0963-933-070 預訂，這樣我們才能幫你準備得更周全～"
       }
     },
     {
