--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="apple-touch-icon" href="https://www.1914cake.com/assets/images/favicon.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
+
+
     <!-- Open Graph Meta Tags -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="華山脆皮雞蛋糕｜永和現烤點心、華山假日攤位人氣甜點">
@@ -374,41 +376,55 @@
             </div>
         </div>
     </section>
-    <section class="faq-section" style="padding: 60px 20px; background-color: #ffffff;">
-    <div class="container">
-        <h2 class="section-title">常見問題</h2>
-        <div style="max-width: 800px; margin: 0 auto; text-align: left;">
+<section class="faq-section" style="padding: 60px 20px; background-color: #ffffff;">
+  <div class="container">
+    <h2 class="section-title">常見問題</h2>
+    <div style="max-width: 800px; margin: 0 auto; text-align: left;">
 
-            <h3 style="color: #FF6B6B;">Q：可以大量預購嗎？</h3>
-            <p>A：可以喔！我們的麵糊都是當天現打的，如果有大量需求，請<strong>提前一天以上</strong>透過 <a href="https://lin.ee/6naLKdL" target="_blank" style="color: #06C755;">LINE</a> 或撥打 <a href="tel:0963933070" style="color: #FF6B6B;">0963-933-070</a> 預訂，這樣我們才能幫你準備得更周全～</p>
+      <h3 style="color: #FF6B6B;">🛒 購買預訂</h3>
 
-            <h3 style="color: #FF6B6B;">Q：雞蛋糕可以用 UberEats 訂嗎？</h3>
-            <p>A：沒問題，我們有提供 UberEats 外送服務，搜尋「華山脆皮雞蛋糕」就找得到！</p>
+      <h4>Q：可以大量預購嗎？</h4>
+      <p>A：可以喔！我們的麵糊都是當天現打的，如果有大量需求，請<strong>提前一天以上</strong>透過 <a href="https://lin.ee/6naLKdL" target="_blank" style="color: #06C755;">LINE</a> 或撥打 <a href="tel:0963933070" style="color: #FF6B6B;">0963-933-070</a> 預訂，這樣我們才能幫你準備得更周全～</p>
 
-            <h3 style="color: #FF6B6B;">Q：平日和假日的營業地點有不同嗎？</h3>
-            <p>A：有的～平日我們在永和福和路店面營業。六、日如果天氣好，就會去台北 1914 華山文創園區「西一館前大草原」擺攤。</p>
+      <h4>Q：雞蛋糕可以用 UberEats 訂嗎？</h4>
+      <p>A：沒問題，我們有提供 UberEats 外送服務，搜尋「華山脆皮雞蛋糕」就找得到！</p>
 
-            <h3 style="color: #FF6B6B;">Q：下雨天也會擺攤嗎？</h3>
-            <p>A：六日如果下雨，華山可能不會出攤，但永和店會開門營業。建議加我們 <a href="https://lin.ee/6naLKdL" target="_blank" style="color: #06C755;">LINE 好友</a> 詢問當天資訊喔！</p>
+      <h3 style="color: #FF6B6B;">📍 擺攤時間</h3>
 
-            <h3 style="color: #FF6B6B;">Q：有沒有分店？</h3>
-            <p>
-                A：有啦！目前我們有三個據點：<br>
-                ✔ 平日：永和店（福和路352號）<br>
-                ✔ 假日：台北華山文創園區 西一館前大草原擺攤<br>
-                ✔ 假日限定「華山起司條店」：專賣華山雞塊、薯條、起司條、冰紅茶，好天氣限定出現！
-            </p>
+      <h4>Q：平日和假日的營業地點有不同嗎？</h4>
+      <p>A：有的～平日我們在永和福和路店面營業。六、日如果天氣好，就會去台北 1914 華山文創園區「西一館前大草原」擺攤。</p>
 
-            <h3 style="color: #FF6B6B;">Q：有哪些人氣口味推薦？</h3>
-            <p>A：拉絲起司、黑糖麻糬、美式熱狗是大家最常點的！還有假日限定的華山雞塊也超熱門～</p>
-        </div>
+      <h4>Q：下雨天也會擺攤嗎？</h4>
+      <p>A：六日如果下雨，華山可能不會出攤，但永和店會開門營業。建議加我們 <a href="https://lin.ee/6naLKdL" target="_blank" style="color: #06C755;">LINE 好友</a> 詢問當天資訊喔！</p>
+
+      <h4>Q：有沒有分店？</h4>
+      <p>A：有啦！目前我們有三個據點：<br>
+        ✔ 平日：永和店（福和路352號）<br>
+        ✔ 假日：台北華山文創園區 西一館前大草原擺攤<br>
+        ✔ 假日限定「華山起司條店」：專賣華山雞塊、薯條、起司條、冰紅茶，好天氣限定出現！</p>
+
+      <h3 style="color: #FF6B6B;">🥞 加熱/回烤小撇步</h3>
+
+      <h4>Q：有哪些人氣口味推薦？</h4>
+      <p>A：拉絲起司、黑糖麻糬、美式熱狗是大家最常點的！還有假日限定的華山雞塊、華山起司條也超熱門～</p>
+
+      <h4>Q：雞蛋糕冷掉或隔夜...怎麼加熱／回烤最好吃？</h4>
+      <p>A：想恢復酥脆口感嗎？試試以下回烤方法<br><br>
+        ♨️ <strong>烤箱</strong>：180度預熱4分鐘，放入雞蛋糕烤90-120秒恢復酥脆口感！<br>
+        ♨️ <strong>氣炸鍋</strong>：170度加熱1-2分鐘，一樣酥脆！<br>
+        ♨️ <strong>電鍋</strong>：不加水乾蒸到跳保溫，也很讚喔！<br><br>
+        因為我們堅持不加防腐劑，冷藏只能保存一天喔～建議盡早食用，風味最佳～</p>
+
     </div>
+  </div>
 </section>
+
 
     <footer style="background-color: #333333; color: white; text-align: center; padding: 20px;">
     <p>華山脆皮雞蛋糕｜永和在地人氣點心</p>
     <p>地址：新北市永和市福和路352號1樓｜營業時間：週一至週五 14:00-24:00</p>
 </footer>
+
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -416,18 +432,18 @@
   "mainEntity": [
     {
       "@type": "Question",
-      "name": "雞蛋糕可以用 UberEats 訂嗎？",
+      "name": "可以大量預購嗎？",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "沒問題，我們有提供 UberEats 外送服務，搜尋「華山脆皮雞蛋糕」就找得到！"
+        "text": "可以喔！我們的麵糊都是當天現打的，如果有大量需求，請提前一天以上透過 LINE 或撥打 0963-933-070 預訂，這樣我們才能幫你準備得更周全～"
       }
     },
     {
       "@type": "Question",
-      "name": "可以大量預購嗎？",
+      "name": "雞蛋糕可以用 UberEats 訂嗎？",
       "acceptedAnswer": {
-      "@type": "Answer",
-      "text": "可以喔！我們的麵糊都是當天現打的，如果有大量需求，請提前一天以上透過 LINE 或撥打 0963-933-070 預訂，這樣我們才能幫你準備得更周全～"
+        "@type": "Answer",
+        "text": "沒問題，我們有提供 UberEats 外送服務，搜尋「華山脆皮雞蛋糕」就找得到！"
       }
     },
     {
@@ -443,7 +459,7 @@
       "name": "下雨天也會擺攤嗎？",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "六日如果下雨，華山可能不會出攤，但永和店會照常營業。建議加我們 LINE 好友詢問當天資訊喔！"
+        "text": "六日如果下雨，華山可能不會出攤，但永和店會開門營業。建議加我們 LINE 好友詢問當天資訊喔！"
       }
     },
     {
@@ -459,12 +475,21 @@
       "name": "有哪些人氣口味推薦？",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "拉絲起司（濃郁牽絲）、黑糖麻糬（Q 彈香甜）、美式熱狗（鹹香爽口）是最受歡迎的口味！還有假日限定的華山雞塊也很熱門～"
+        "text": "拉絲起司、黑糖麻糬、美式熱狗是大家最常點的！還有假日限定的華山雞塊、華山起司條也超熱門～"
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "雞蛋糕冷掉或隔夜怎麼加熱最好吃？",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "想恢復酥脆口感嗎？試試以下回烤方法：烤箱 180 度預熱 4 分鐘後烤 90-120 秒；氣炸鍋 170 度加熱 1-2 分鐘；電鍋不加水乾蒸到跳保溫即可。我們堅持不加防腐劑，冷藏只能保存一天，建議盡早食用，風味最佳～"
       }
     }
   ]
 }
 </script>
+
 
 </body>
 </html>
