--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
       <p>A：有的～平日我們在永和福和路店面營業。六、日如果天氣好，就會去台北 1914 華山文創園區「西一館前大草原」擺攤。</p>
 
       <h4>Q：下雨天也會擺攤嗎？</h4>
-      <p>A：六日如果下雨，華山可能不會出攤，但永和店會開門營業。建議加我們 <a href="https://lin.ee/6naLKdL" target="_blank" style="color: #06C755;">LINE 好友</a> 詢問當天資訊喔！</p>
+      <p>A：六、日如果下雨，華山可能不會出攤，但永和店會開門營業。建議加我們 <a href="https://lin.ee/6naLKdL" target="_blank" style="color: #06C755;">LINE 好友</a> 詢問當天資訊喔！</p>
 
       <h4>Q：有沒有分店？</h4>
       <p>A：有啦！目前我們有三個據點：<br>
@@ -403,7 +403,7 @@
         ✔ 假日：台北華山文創園區 西一館前大草原擺攤<br>
         ✔ 假日限定「華山起司條店」：專賣華山雞塊、薯條、起司條、冰紅茶，好天氣限定出現！</p>
 
-      <h3 style="color: #FF6B6B;">🥞 加熱/回烤小撇步</h3>
+      <h3 style="color: #FF6B6B;">🥞 推薦口味與加熱/回烤小撇步</h3>
 
       <h4>Q：有哪些人氣口味推薦？</h4>
       <p>A：拉絲起司、黑糖麻糬、美式熱狗是大家最常點的！還有假日限定的華山雞塊、華山起司條也超熱門～</p>
