--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                     <span class="button-icon">📱</span>
                     <span>加入LINE好友</span>
                 </a>
-                <a href="https://www.ubereats.com/store/華山脆皮雞蛋糕-|師大分部臭豆腐/QrEwI9F4Ujmydul7u_fVVA?diningMode=DELIVERY" class="contact-button uber-button" target="_blank">
+                <a href="https://www.ubereats.com/tw/store/%E8%8F%AF%E5%B1%B1%E9%9B%9E%E8%9B%8B%E7%B3%95-%7C-%E5%B8%AB%E5%A4%A7%E5%88%86%E9%83%A8%E8%87%AD%E8%B1%86%E8%85%90/QrEwI9F4Ujmydul7u_fVVA?diningMode=DELIVERY&ps=1" class="contact-button uber-button" target="_blank">
                     <span class="button-icon">🚗</span>
                     <span>UberEats外送</span>
                 </a>
