--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="華山脆皮雞蛋糕，現烤的美味，多種口味選擇，每日現調卡士達醬、拉絲起司、奧利奧Oreo、黑糖麻糬、紐約風味脆皮熱狗、德式香腸，大人小孩都愛不釋手！歡迎來店品嚐或使用UberEats外送！">
+    <meta name="description" content="雞蛋糕控不能錯過！永和華山脆皮雞蛋糕，主打現烤酥脆、每日現調卡士達醬、拉絲起司、奧利奧Oreo、黑糖麻糬、紐約風味脆皮熱狗、德式香腸，大人小孩都愛不釋手！歡迎來店品嚐或使用UberEats外送！">
     <meta name="keywords" content="華山脆皮雞蛋糕,雞蛋糕,永和美食,永和小吃,脆皮雞蛋糕">
     <link rel="canonical" href="https://www.1914cake.com"/>
-    <title>華山脆皮雞蛋糕｜永和現烤點心專賣店・華山假日限定攤位</title>
+    <title>雞蛋糕專賣｜華山脆皮雞蛋糕・永和現烤人氣甜點、華山假日攤位人氣甜點</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="https://www.1914cake.com/assets/images/favicon.png">
@@ -17,15 +17,15 @@
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="華山脆皮雞蛋糕｜永和現烤點心、華山假日攤位人氣甜點">
-    <meta property="og:description" content="永和人氣現烤雞蛋糕，多種創意口味：卡士達、Oreo、黑糖麻糬、拉絲起司、德式香腸。假日限定還有華山雞塊、起司條等炸物！">
+    <meta property="og:title" content="雞蛋糕專賣｜華山脆皮雞蛋糕・永和現烤人氣甜點、華山假日攤位人氣甜點">
+    <meta property="og:description" content="雞蛋糕控不能錯過！永和華山脆皮雞蛋糕，主打現烤酥脆、每日現調卡士達醬、拉絲起司、奧利奧Oreo、黑糖麻糬、紐約風味脆皮熱狗、德式香腸，大人小孩都愛不釋手！歡迎來店品嚐或使用UberEats外送！">
     <meta property="og:url" content="https://www.1914cake.com/">
     <meta property="og:image" content="https://www.1914cake.com/assets/images/banner.png">
 
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="華山脆皮雞蛋糕｜永和現烤點心、華山假日攤位人氣甜點">
-    <meta name="twitter:description" content="從永和到華山，現烤的香氣與創意口味征服味蕾！卡士達、黑糖麻糬、華山雞塊，一口接一口停不下來！">
+    <meta name="twitter:title" content="雞蛋糕專賣｜華山脆皮雞蛋糕・永和現烤人氣甜點、華山假日攤位人氣甜點">
+    <meta name="twitter:description" content="雞蛋糕控不能錯過！永和華山脆皮雞蛋糕，主打現烤酥脆、每日現調卡士達醬、拉絲起司、奧利奧Oreo、黑糖麻糬、紐約風味脆皮熱狗、德式香腸，大人小孩都愛不釋手！歡迎來店品嚐或使用UberEats外送！">
     <meta name="twitter:image" content="https://www.1914cake.com/assets/images/banner.png">
     <style>
         :root {
@@ -287,10 +287,17 @@
     <section class="products">
         <div class="container">
             <h2 class="section-title">我們的雞蛋糕</h2>
+<div style="text-align: center; max-width: 800px; margin: 0 auto; font-size: 1.1rem; padding: 20px;">
+  假日在華山總是排隊排到彎腰 🤩，平日永和有店面營業，還能直接外送到你家 🚗💨<br>
+  每天現打麵糊，現烤香酥的雞蛋糕，酥脆外皮一咬就愛上 💕<br>
+  不管是濃郁卡士達還是拉絲起司，每一口都藏著幸福的味道 😋<br>
+  好吃到讓你一口接一口，根本停不下來～快來嚐嚐我們的招牌雞蛋糕吧！🥞
+</div>
+
             <div class="product-grid">
                 <!-- 產品卡片 -->
                 <div class="product-card">
-                    <img src="assets/images/product1.png" alt="內餡雞蛋糕" class="product-image">
+                    <img src="assets/images/product1.png" alt="卡士達餡雞蛋糕" class="product-image">
                     <div class="product-info">
                         <h3 class="product-name">內餡雞蛋糕</h3>
                         <p>每日現調卡士達醬、拉絲起司、奧利奧Oreo、黑糖麻糬四種口味選擇</p>
@@ -424,7 +431,6 @@
     <p>華山脆皮雞蛋糕｜永和在地人氣點心</p>
     <p>地址：新北市永和市福和路352號1樓｜營業時間：週一至週五 14:00-24:00</p>
     <p style="margin-top: 10px;">Copyright © 2025 Powered by <a href="mailto:eva@1914cake.com" style="color: #FFD166; text-decoration: none;">華山脆皮雞蛋糕</a></p>
-
 </footer>
 
 <script type="application/ld+json">
