--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
       <h3 style="color: #FF6B6B;">🛒 購買預訂</h3>
 
-      <h4>Q：可以大量預購嗎？</h4>
+      <h4>Q：雞蛋糕可以大量預購嗎？</h4>
       <p>A：可以喔！我們的麵糊都是當天現打的，如果有大量需求，請<strong>提前一天以上</strong>透過 <a href="https://lin.ee/6naLKdL" target="_blank" style="color: #06C755;">LINE</a> 或撥打 <a href="tel:0963933070" style="color: #FF6B6B;">0963-933-070</a> 預訂，這樣我們才能幫你準備得更周全～</p>
 
       <h4>Q：雞蛋糕可以用 UberEats 訂嗎？</h4>
@@ -440,7 +440,7 @@
   "mainEntity": [
     {
       "@type": "Question",
-      "name": "可以大量預購嗎？",
+      "name": "雞蛋糕可以大量預購嗎？",
       "acceptedAnswer": {
         "@type": "Answer",
         "text": "可以喔！我們的麵糊都是當天現打的，如果有大量需求，請提前一天以上透過 LINE 或撥打 0963-933-070 預訂，這樣我們才能幫你準備得更周全～"
