--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 <section class="info-section">
     <div class="container">
         <div class="info-box" style="text-align: left; font-size: 0.95rem;">
-            <h2 class="info-title" style="text-align: center;">營業資訊</h2>
+            <h2 class="info-title">營業資訊</h2>
             <p><strong>📍 地址：</strong>新北市永和區福和路352號1樓（樂華夜市步行 3 分鐘）</p>
             <p><strong>🕒 營業時間：</strong>週一至週五 14:00–24:00（賣完為止）</p>
             <p><strong>🚶 鄰近地標：</strong>樂華夜市、師大分部臭豆腐（500碗推薦排隊美食）</p>
@@ -369,8 +369,6 @@
         </div>
     </div>
 </section>
-
-
     
     <!-- 聯絡區 -->
     <section class="contact-section">
