--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         }
 
         .info-text {
-            font-size: 1.1rem;
+            font-size: 0.99rem;
             margin-bottom: 15px;
         }
 
@@ -352,16 +352,17 @@
 <!-- 營業資訊區 -->
 <section class="info-section">
     <div class="container">
-        <div class="info-box" style="text-align: left; font-size: 0.95rem;">
+        <div class="info-box">
             <h2 class="info-title">營業資訊</h2>
-            <p><strong>📍 地址：</strong>新北市永和區福和路352號1樓（樂華夜市步行 3 分鐘）</p>
-            <p><strong>🕒 營業時間：</strong>週一至週五 14:00–24:00（賣完為止）</p>
-            <p><strong>🚶 鄰近地標：</strong>樂華夜市、師大分部臭豆腐（500碗推薦排隊美食）</p>
-            <p><strong>🚗 外送服務：</strong>永和、中和地區提供 UberEats 外送，美食到府好方便</p>
-            <p><strong>💡 小提醒：</strong>想吃臭豆腐配雞蛋糕？永和店外送也能一併點到喔！</p>
+            <p class="info-text">📍 營業地址：永和店位於新北市永和區福和路352號1樓，近樂華夜市</p>
+            <p class="info-text">🕒 營業時間：週一至週五下午 2 點至晚上 12 點，例假日可LINE詢問</p>
+            <p class="info-text">🚶 我們店就在<strong>樂華夜市附近</strong>，步行只需 3~5 分鐘，逛夜市後來點雞蛋糕剛剛好！</p>
+            <p class="info-text">👣 隔壁就是排隊名店 <strong>師大分部臭豆腐</strong>，曾入選《500碗美食》，人氣超旺！</p>
+            <p class="info-text">🚗 永和店支援 UberEats 外送，<strong>想吃臭豆腐配雞蛋糕</strong>？現在一起點就行！</p>
+            <p class="info-text">📦 <strong>永和、中和地區</strong>的朋友也歡迎點外送，下午茶點心不用出門就能吃到！</p>
 
             <!-- 地圖 -->
-            <div class="map-container" style="margin-top: 20px;">
+            <div class="map-container">
                 <a href="https://maps.app.goo.gl/1pYwvo3BMQQMVytL6" target="_blank">
                     <img src="assets/images/map_cr.png" alt="華山脆皮雞蛋糕 永和店 地圖位置">
                 </a>
@@ -369,7 +370,8 @@
         </div>
     </div>
 </section>
-    
+
+
     <!-- 聯絡區 -->
     <section class="contact-section">
         <div class="container">
