--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@
             <p class="info-text">📍 營業地址：永和店位於新北市永和區福和路352號1樓，近樂華夜市</p>
             <p class="info-text">🕒 營業時間：週一至週五下午 2 點至晚上 12 點，例假日可LINE詢問</p>
             <p class="info-text">🚶 我們店就在<strong>樂華夜市附近</strong>，步行只需 3~5 分鐘，逛夜市後來點雞蛋糕剛剛好！</p>
-            <p class="info-text">👣 隔壁就是排隊名店 <strong>師大分部臭豆腐</strong>，曾入選《500碗美食》，人氣超旺！</p>
-            <p class="info-text">🚗 永和店支援 UberEats 外送，<strong>想吃臭豆腐配雞蛋糕</strong>？現在一起點就行！</p>
+            <p class="info-text">👣 隔壁就是排隊名店 <strong>師大分部臭豆腐</strong>，台灣500碗店家 🎉🎉🎉，人氣超旺！</p>
+            <p class="info-text">🚗 永和店支援 UberEats 外送，<strong>想吃傳說中的神之臭豆腐配雞蛋糕</strong>？現在一起點就行！</p>
             <p class="info-text">📦 <strong>永和、中和地區</strong>的朋友也歡迎點外送，下午茶點心不用出門就能吃到！</p>
 
             <!-- 地圖 -->
@@ -370,7 +370,6 @@
         </div>
     </div>
 </section>
-
 
     <!-- 聯絡區 -->
     <section class="contact-section">
@@ -401,6 +400,12 @@
       <h4>Q：雞蛋糕可以用 UberEats 訂嗎？</h4>
       <p>A：沒問題，我們有提供 UberEats 外送服務，搜尋「華山脆皮雞蛋糕」就找得到！</p>
 
+      <h4>Q：永和與中和地區有提供外送服務嗎？</h4>
+      <p>A：有的！我們的雞蛋糕外送服務遍及永和、中和鄰近商圈，下午茶點心不用出門就能吃到！</p>
+
+      <h4>Q：可以同時訂購雞蛋糕與師大分部臭豆腐嗎？</h4>
+      <p>A：當然可以！想吃傳說中的神之臭豆腐，又想吃雞蛋糕，可以透過 <a href="https://www.ubereats.com/tw/store/%E8%8F%AF%E5%B1%B1%E9%9B%9E%E8%9B%8B%E7%B3%95-%7C-%E5%B8%AB%E5%A4%A7%E5%88%86%E9%83%A8%E8%87%AD%E8%B1%86%E8%85%90/QrEwI9F4Ujmydul7u_fVVA?diningMode=DELIVERY&ps=1" target="_blank" style="color: #06C755;">UberEats</a> 一起點餐，讓您一次享受兩種美味！</p>
+
       <h3 style="color: #FF6B6B;">📍 擺攤時間</h3>
 
       <h4>Q：平日和假日的營業地點有不同嗎？</h4>
@@ -415,7 +420,7 @@
         ✔ 假日：台北華山文創園區 西一館前大草原擺攤<br>
         ✔ 假日限定「華山起司條店」：專賣華山雞塊、薯條、起司條、冰紅茶，好天氣限定出現！</p>
 
-      <h3 style="color: #FF6B6B;">🥞 推薦口味與加熱/回烤小撇步</h3>
+      <h3 style="color: #FF6B6B;">🥞 推薦口味與加熱／回烤小撇步</h3>
 
       <h4>Q：有哪些人氣口味推薦？</h4>
       <p>A：拉絲起司、黑糖麻糬、美式熱狗是大家最常點的！還有假日限定的華山雞塊、華山起司條也超熱門～</p>
@@ -461,6 +466,22 @@
     },
     {
       "@type": "Question",
+      "name": "永和與中和地區有提供外送服務嗎？",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "有的！我們的雞蛋糕外送服務遍及永和、中和鄰近商圈，下午茶點心不用出門就能吃到！"
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "可以同時訂購雞蛋糕與師大分部臭豆腐嗎？",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "當然可以！想吃傳說中的神之臭豆腐，又想吃雞蛋糕，可以透過 UberEats 一起點餐，讓您一次享受兩種美味！"
+      }
+    },
+    {
+      "@type": "Question",
       "name": "平日和假日的營業地點有不同嗎？",
       "acceptedAnswer": {
         "@type": "Answer",
@@ -472,7 +493,7 @@
       "name": "下雨天也會擺攤嗎？",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "六日如果下雨，華山可能不會出攤，但永和店會開門營業。建議加我們 LINE 好友詢問當天資訊喔！"
+        "text": "六、日如果下雨，華山可能不會出攤，但永和店會開門營業。建議加入我們的 LINE 好友詢問當天資訊喔！"
       }
     },
     {
@@ -480,7 +501,7 @@
       "name": "有沒有分店？",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "有啦！目前我們有三個據點：平日永和店、假日華山大草原擺攤，還有假日限定的華山起司條店，專賣雞塊、薯條、起司條與冰紅茶。"
+        "text": "目前我們有三個據點：平日為永和福和路店；假日於華山文創園區擺攤；另有假日限定的華山起司條店，販售雞塊、薯條、冰紅茶等人氣品項。"
       }
     },
     {
@@ -488,7 +509,7 @@
       "name": "有哪些人氣口味推薦？",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "拉絲起司、黑糖麻糬、美式熱狗是大家最常點的！還有假日限定的華山雞塊、華山起司條也超熱門～"
+        "text": "拉絲起司、黑糖麻糬、美式熱狗是大家最常點的！假日限定的華山雞塊與起司條也非常受歡迎。"
       }
     },
     {
@@ -496,12 +517,13 @@
       "name": "雞蛋糕冷掉或隔夜怎麼加熱最好吃？",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "想恢復酥脆口感嗎？試試以下回烤方法：烤箱 180 度預熱 4 分鐘後烤 90-120 秒；氣炸鍋 170 度加熱 1-2 分鐘；電鍋不加水乾蒸到跳保溫即可。我們堅持不加防腐劑，冷藏只能保存一天，建議盡早食用，風味最佳～"
+        "text": "可用烤箱180度烤90~120秒、氣炸鍋170度加熱1~2分鐘，或電鍋乾蒸。因無添加防腐劑，建議冷藏一天內食用完畢，風味最佳。"
       }
     }
   ]
 }
 </script>
+
 
 
 </body>
