--- a/index.html
+++ b/index.html
@@ -6,25 +6,27 @@
     <meta name="description" content="雞蛋糕控不能錯過！永和華山脆皮雞蛋糕，主打現烤酥脆、每日現調卡士達醬、拉絲起司、奧利奧Oreo、黑糖麻糬、紐約風味脆皮熱狗、德式香腸，大人小孩都愛不釋手！歡迎來店品嚐或使用UberEats外送！">
     <meta name="keywords" content="華山脆皮雞蛋糕,雞蛋糕,永和美食,永和小吃,脆皮雞蛋糕">
     <link rel="canonical" href="https://www.1914cake.com"/>
-    <title>雞蛋糕專賣｜華山脆皮雞蛋糕・永和現烤人氣甜點、華山假日攤位人氣甜點</title>
+    <title>雞蛋糕推薦｜永和華山脆皮雞蛋糕・近樂華夜市、師大分部臭豆腐旁</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="https://www.1914cake.com/assets/images/favicon.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="https://www.1914cake.com/assets/images/favicon.png">
     <link rel="apple-touch-icon" href="https://www.1914cake.com/assets/images/favicon.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
+	
 
 
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="雞蛋糕專賣｜華山脆皮雞蛋糕・永和現烤人氣甜點、華山假日攤位人氣甜點">
+    <meta property="og:title" content="雞蛋糕推薦｜永和華山脆皮雞蛋糕・近樂華夜市、師大分部臭豆腐旁">
     <meta property="og:description" content="雞蛋糕控不能錯過！永和華山脆皮雞蛋糕，主打現烤酥脆、每日現調卡士達醬、拉絲起司、奧利奧Oreo、黑糖麻糬、紐約風味脆皮熱狗、德式香腸，大人小孩都愛不釋手！歡迎來店品嚐或使用UberEats外送！">
     <meta property="og:url" content="https://www.1914cake.com/">
     <meta property="og:image" content="https://www.1914cake.com/assets/images/banner.png">
 
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="雞蛋糕專賣｜華山脆皮雞蛋糕・永和現烤人氣甜點、華山假日攤位人氣甜點">
+    <meta name="twitter:title" content="雞蛋糕推薦｜永和華山脆皮雞蛋糕・近樂華夜市、師大分部臭豆腐旁">
     <meta name="twitter:description" content="雞蛋糕控不能錯過！永和華山脆皮雞蛋糕，主打現烤酥脆、每日現調卡士達醬、拉絲起司、奧利奧Oreo、黑糖麻糬、紐約風味脆皮熱狗、德式香腸，大人小孩都愛不釋手！歡迎來店品嚐或使用UberEats外送！">
     <meta name="twitter:image" content="https://www.1914cake.com/assets/images/banner.png">
     <style>
