--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="https://www.1914cake.com/assets/images/favicon.png">
 	<link rel="icon" type="image/png" sizes="192x192" href="https://www.1914cake.com/assets/images/favicon.png">
     <link rel="apple-touch-icon" href="https://www.1914cake.com/assets/images/favicon.png">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-	
-
+	<link rel="icon" href="/favicon.ico" sizes="16x16 32x32 48x48" type="image/x-icon">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
 
     <!-- Open Graph Meta Tags -->
@@ -299,14 +298,14 @@
             <div class="product-grid">
                 <!-- 產品卡片 -->
                 <div class="product-card">
-                    <img src="assets/images/product1.png" alt="卡士達餡雞蛋糕" class="product-image">
+                    <img src="assets/images/product1.png" alt="永和雞蛋糕 卡士達口味推薦" class="product-image">
                     <div class="product-info">
                         <h3 class="product-name">內餡雞蛋糕</h3>
                         <p>每日現調卡士達醬、拉絲起司、奧利奧Oreo、黑糖麻糬四種口味選擇</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="assets/images/product2.png" alt="美式熱狗" class="product-image">
+                    <img src="assets/images/product2.png" alt="夜市的美式熱狗" class="product-image">
                     <div class="product-info">
                         <h3 class="product-name">美式熱狗</h3>
                         <p>紐約風味脆皮熱狗+亨氏蕃茄醬</p>
@@ -526,6 +525,32 @@
 }
 </script>
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "華山脆皮雞蛋糕",
+  "image": "https://www.1914cake.com/assets/images/banner.png",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "新北市永和區福和路352號1樓",
+    "addressLocality": "新北市",
+    "addressRegion": "新北市",
+    "postalCode": "234",
+    "addressCountry": "TW"
+  },
+  "url": "https://www.1914cake.com",
+  "telephone": "+886-963-933070",
+  "servesCuisine": ["雞蛋糕", "甜點", "現烤點心"],
+  "priceRange": "$",
+  "openingHours": "Mo-Fr 14:00-24:00",
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 25.010746,
+    "longitude": 121.519935
+  }
+}
+</script>
 
 
 </body>
