--- a/index.html
+++ b/index.html
@@ -528,29 +528,30 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "LocalBusiness",
+  "@type": "Bakery",
   "name": "華山脆皮雞蛋糕",
   "image": "https://www.1914cake.com/assets/images/banner.png",
+  "url": "https://www.1914cake.com/",
+  "telephone": "+886-963-933070",
+  "priceRange": "$",
+  "servesCuisine": ["台式點心", "雞蛋糕", "甜點", "臭豆腐"],
+  "openingHours": "Mo-Fr 14:00-24:00",
   "address": {
     "@type": "PostalAddress",
-    "streetAddress": "新北市永和區福和路352號1樓",
-    "addressLocality": "新北市",
+    "streetAddress": "福和路352號1樓",
+    "addressLocality": "永和市",
     "addressRegion": "新北市",
     "postalCode": "234",
     "addressCountry": "TW"
   },
-  "url": "https://www.1914cake.com",
-  "telephone": "+886-963-933070",
-  "servesCuisine": ["雞蛋糕", "甜點", "現烤點心"],
-  "priceRange": "$",
-  "openingHours": "Mo-Fr 14:00-24:00",
   "geo": {
     "@type": "GeoCoordinates",
     "latitude": 25.010746,
-    "longitude": 121.519935
+    "longitude": 121.5199535
   }
 }
 </script>
+
 
 
 </body>
