--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
     <footer style="background-color: #333333; color: white; text-align: center; padding: 20px;">
     <p>華山脆皮雞蛋糕｜永和在地人氣點心</p>
     <p>地址：新北市永和市福和路352號1樓｜營業時間：週一至週五 14:00-24:00</p>
-    <p style="margin-top: 10px;">Copyright © 2025 Powered by <a href="mailto:eva@1914cake.com" style="color: #FFD166; text-decoration: none;">華山脆皮雞蛋糕</a></p>
+    <p style="margin-top: 10px;">Copyright © 2025 Powered by <a href="mailto:hi@1914cake.com" style="color: #FFD166; text-decoration: none;">華山脆皮雞蛋糕</a></p>
 </footer>
 
 <script type="application/ld+json">
