--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="https://www.1914cake.com/assets/images/favicon.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="https://www.1914cake.com/assets/images/favicon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://www.1914cake.com/assets/images/favicon.png">
     <link rel="apple-touch-icon" href="https://www.1914cake.com/assets/images/favicon.png">
-	<link rel="icon" href="/favicon.ico" sizes="16x16 32x32 48x48" type="image/x-icon">
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://www.1914cake.com/favicon.ico" sizes="16x16 32x32 48x48" type="image/x-icon">
+    <link rel="shortcut icon" href="https://www.1914cake.com/favicon.ico" type="image/x-icon">
 
 
     <!-- Open Graph Meta Tags -->
